Add workspace file areas: Data Warehouse area, in-browser editing, zip downloads
